--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Removed incorrect parent reference -->
-
     <groupId>io.github.venkat1701</groupId>
     <artifactId>gemini_client_for_java</artifactId>
     <version>1.0.0</version>
     <name>gemini_client_for_java</name>
     <description>A Java client library for interacting with Gemini APIs</description>
-    <url>https://github.com/venkat1701/javageminiclient</url>
+    <url>https://github.com/venkat1701/gemini_client_for_java</url>
 
     <properties>
         <java.version>17</java.version>
@@ -51,13 +49,8 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.1.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -66,31 +59,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>github</id>
-            <name>GitHub Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/ollama4j/ollama4j</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <licenses>
         <license>
@@ -108,22 +80,9 @@
         </developer>
     </developers>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Packages - Releases</name>
-            <url>https://github.com/bhavuklabs/javageminiclient</url>
-        </repository>
-        <snapshotRepository>
-            <id>github</id>
-            <name>GitHub Packages - Snapshots</name>
-            <url>https://github.com/bhavuklabs/javageminiclient</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <scm>
-        <connection>scm:git:git://github.com/bhavuklabs/javageminiclient.git</connection>
-        <developerConnection>scm:git:ssh://github.com/bhavuklabs/javageminiclient.git</developerConnection>
-        <url>https://github.com/bhavuklabs/javageminiclient</url>
+        <connection>scm:git:git://github.com/venkat1701/gemini_client_for_java.git</connection>
+        <developerConnection>scm:git:ssh://github.com/venkat1701/gemini_client_for_java.git</developerConnection>
+        <url>https://github.com/venkat1701/gemini_client_for_java</url>
     </scm>
 </project>
